# agora-desktop

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: style.css
scripts/: build-qt6.sh  build.sh
src/: main.cpp
src/api/: http_client.cpp  http_client.hpp  provider.cpp  provider.hpp
src/audio/: recorder.cpp  recorder.hpp
src/db/: database.cpp  database.hpp
src/models/: conversation.cpp  conversation.hpp  message.cpp  message.hpp
src/ui/: chat_view.cpp  chat_view.hpp  input_bar.cpp  input_bar.hpp  main_window.cpp  main_window.hpp  main_window_gtk.cpp  main_window_qt.cpp  main_window_qt.hpp  message_list.cpp  message_list.hpp  settings.cpp  settings.hpp  theme.cpp  theme.hpp
src/utils/: config.cpp  config.hpp  import_export.cpp  import_export.hpp  memory_manager.cpp  memory_manager.hpp
